@@ -42,6 +42,7 @@
  */
 signed int ICACHE_FLASH_ATTR http_deny_handler(struct http_request *request)
 {
+	debug("Denying access to %s.\n", request->uri);
 	request->response.status_code = 403;
 	return(RESPONSE_DONE_CONTINUE);
 }
