@@ -90,13 +90,12 @@ bool ICACHE_FLASH_ATTR http_fs_init(char *root)
  * @brief Open a file for a request.
  * 
  * Allocates and populates the context file data if a file is found.
- * If called with an error status, the handler will search the for a
- * html file with the same name as the status code (e.g. 404.html).
  * 
  * @param request The request.
+ * @param err Handles only error statuses if `true`. 
  * @return True on success.
  */
-bool ICACHE_FLASH_ATTR http_fs_open_file(struct http_request *request)
+bool ICACHE_FLASH_ATTR http_fs_open_file(struct http_request *request, bool err)
 {
 	char *uri = request->uri;
 	char *fs_uri = NULL;
@@ -106,20 +105,30 @@ bool ICACHE_FLASH_ATTR http_fs_open_file(struct http_request *request)
 	size_t index_size = 10;
 	struct http_fs_context *context;
 	
-	debug("HTTP FS handler looking for %s.\n", uri);
+	debug("HTTP file system handler looking for %s.\n", uri);
+	if ((!err) && (request->response.status_code > 399))
+	{
+		warn(" Not handling errors, and status is %d. Leaving.\n",
+			  request->response.status_code);
+	}
+	if ((err) && (request->response.status_code < 400))
+	{
+		warn(" Handling errors, and status is %d. Leaving.\n",
+			  request->response.status_code);
+	}
+	if ((err) && (request->response.status_code > 399))
+	{
+		debug(" Error status %d.\n", request->response.status_code);
+		uri = db_malloc(sizeof(char) * 10, "uri http_fs_test");
+		uri[0] = '/';
+		itoa(request->response.status_code, uri + 1, 10);
+		os_memcpy(uri + 4, ".html\0", 6);
+		debug(" Status not 200 using URI %s.\n", uri);
+	}
+
 	//Check if we've already done this.
 	if (!request->response.context)
 	{
-		//Return an error page, if status says so.
-		if (request->response.status_code > 399)
-		{
-			debug(" Error status %d.\n", request->response.status_code);
-			uri = db_malloc(sizeof(char) * 10, "uri http_fs_test");
-			uri[0] = '/';
-			itoa(request->response.status_code, uri + 1, 10);
-			os_memcpy(uri + 4, ".html\0", 6);
-			debug(" Status not 200 using URI %s.\n", uri);
-		}	
 		//Skip first slash;
 		uri++;
 		//Change an '/' uri into 'index.html'.
@@ -181,6 +190,13 @@ bool ICACHE_FLASH_ATTR http_fs_open_file(struct http_request *request)
 		debug("File system handler found: %s.\n", context->filename);
 		return(true);
 	}
+	//Free context if there is an error, and we are not handling it.
+	if (!err)
+	{
+		debug(" Error status, freeing context.\n");
+		db_free(context);
+		request->response.context = NULL;
+	}
 	debug("No file system handler found.\n");
     return(false);
 }
@@ -188,8 +204,7 @@ bool ICACHE_FLASH_ATTR http_fs_open_file(struct http_request *request)
 /**
  * @brief Handle HTTP file system responses.
  * 
- * If called with an error status, the handler will search the for a
- * html file with the same name as the status code (e.g. 404.html).
+ * Does nothing is an error status is set.
  */
 signed int ICACHE_FLASH_ATTR http_fs_handler(struct http_request *request)
 {
@@ -206,6 +221,14 @@ signed int ICACHE_FLASH_ATTR http_fs_handler(struct http_request *request)
 		warn("Empty request.\n");
 		return(RESPONSE_DONE_ERROR);
 	}
+	
+	//Skip on error.
+	if (request->response.status_code > 399)
+	{
+		debug(" Error status %d, skipping.\n",
+			  request->response.status_code);
+		return(RESPONSE_DONE_CONTINUE);
+	}
 	if ((request->type != HTTP_GET) &&
 		(request->type != HTTP_HEAD))
 	{
@@ -216,10 +239,147 @@ signed int ICACHE_FLASH_ATTR http_fs_handler(struct http_request *request)
 	//Status and headers.
 	if (request->response.state == HTTP_STATE_NONE)
 	{
-		if (!http_fs_open_file(request))
+		if (!http_fs_open_file(request, false))
 		{
 			debug(" Could not find file.\n");
 			request->response.status_code = 404;
+			return(RESPONSE_DONE_CONTINUE);
+		}
+		//Context has just been created.
+		context = request->response.context;
+		//We have not send anything.
+		request->response.message_size = 0;
+		//Get extension.
+		ext = http_mime_get_ext(context->filename);
+		//Send status and headers.
+		ret += http_send_status_line(request->connection, request->response.status_code);
+		ret += http_send_default_headers(request, context->total_size, ext);
+		if (request->type == HTTP_HEAD)
+		{
+			request->response.state = HTTP_STATE_DONE;
+			return(ret);
+		}
+		else
+		{
+			//Go on to sending the file.
+			request->response.state = HTTP_STATE_MESSAGE;
+		}
+	}
+	
+	//Message.
+	if (request->response.state == HTTP_STATE_MESSAGE)
+	{
+		data_left = context->total_size - request->response.message_size;
+		debug(" Sending %s, %d bytes left.\n", context->filename, data_left);
+		buffer_free = HTTP_SEND_BUFFER_SIZE - (request->response.send_buffer_pos - request->response.send_buffer);
+		//Read a chunk of data and send it.
+		if (data_left > HTTP_FILE_CHUNK_SIZE)
+		{
+			//There is still more than HTTP_FILE_CHUNK_SIZE to read.
+			if (buffer_free < HTTP_FILE_CHUNK_SIZE)
+			{
+				bytes = buffer_free;
+				debug(" Truncating read to match send buffer space of %d bytes.\n", bytes);
+			}
+			else
+			{
+				bytes = HTTP_FILE_CHUNK_SIZE;
+			}
+		}
+		else
+		{
+			//Last block.
+			if (buffer_free < data_left)
+			{
+				bytes = buffer_free;
+				debug(" Truncating read to match send buffer space of %d bytes.\n", bytes);
+			}
+			else
+			{
+				bytes = data_left;
+			}
+		}
+		if (bytes)
+		{
+			fs_read(buffer, bytes, sizeof(char), context->file);
+			ret += http_send(request->connection, buffer, bytes);
+			request->response.message_size += bytes;
+			//Might send status and header data as well.
+			if (ret >= bytes)
+			{
+				return(ret);
+			}
+			warn(" Not all data send (message %d, and sent data %d bytes).\n", bytes, ret);
+			return(ret);
+		}
+		else
+		{
+			//We're done sending the message.
+			request->response.state = HTTP_STATE_DONE;
+		}
+	}
+	
+	//Free memory.
+	if (request->response.state == HTTP_STATE_DONE)
+	{
+		if (ret)
+		{
+			warn("Did not sent full message.\n");
+		}
+		fs_close(context->file);
+		debug("Freeing data for file response.\n");
+		if (context)
+		{
+			if (context->filename)
+			{
+				debug("Deallocating file name %s.\n", context->filename);
+				db_free(context->filename);
+			}
+			debug("Deallocating request handler context.\n");
+			db_free(context);
+			request->response.context = NULL;
+		}
+	}
+	debug("Response done.\n");
+	return(RESPONSE_DONE_FINAL);
+}
+
+/**
+ * @brief Handle HTTP error responses from file system responses.
+ * 
+ * If called with an error status, the handler will search the for a
+ * html file with the same name as the status code (e.g. 404.html).
+ */
+signed int ICACHE_FLASH_ATTR http_fs_error_handler(struct http_request *request)
+{
+	struct http_fs_context *context = request->response.context;
+	size_t data_left, buffer_free, bytes;
+	char buffer[HTTP_FILE_CHUNK_SIZE];
+	signed int ret = 0;
+	char *ext;
+	
+	debug("Entering HTTP error file system handler (request %p).\n",
+		  request);
+	if (!request)
+	{
+		warn("Empty request.\n");
+		return(RESPONSE_DONE_ERROR);
+	}
+	
+	//Set error status is to error since we got here.
+	if (request->response.status_code < 400)
+	{
+		debug(" No error status (%d), setting status 404.\n",
+			  request->response.status_code);
+		//If we got here, some one else has not responded.
+		request->response.status_code = 404;
+	}
+	//Status and headers.
+	if (request->response.state == HTTP_STATE_NONE)
+	{
+		if (!http_fs_open_file(request, true))
+		{
+			debug(" Could not find file.\n");
 			return(RESPONSE_DONE_CONTINUE);
 		}
 		//Context has just been created.
