@@ -80,7 +80,7 @@
 /**
  * @brief Print debug info on the serial port.
  */
-//#define DEBUG
+#define DEBUG
 /**
  * @brief Print memory allocation info.
  */
